Add missing required packages to profiles
Change-Id: I953e3e7c0d7ab26c06336085b6ab57240b4135f0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3428,6 +3428,12 @@
             </intent-filter>/>
         </receiver>
 
+        <receiver android:name=".users.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
