Add missing required packages to existing profiles
* Also enable backup service

Change-Id: I953e3e7c0d7ab26c06336085b6ab57240b4135f0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3440,6 +3440,12 @@
                        android:value="com.android.settings.statusbar.StatusBarSettings"/>
         </activity>
 
+        <receiver android:name=".users.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
