--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3441,6 +3441,12 @@
                        android:value="com.android.settings.statusbar.StatusBarSettings"/>
         </activity>
 
+        <receiver android:name=".users.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
